# Trivela

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_ISSUE_623.md  IMPLEMENTATION_SUMMARY_ISSUE_291.md  ISSUES_329_336_337_339_IMPLEMENTATION.md  README.md  compose.yaml  package-lock.json  package.json
.github/:  SECURITY.md  prometheus.yml
.github/workflows/: alertingrules.yml  alertmanager.yml  compose.monitoring.yml  contracts-ci.yml  frontend-ci.yml  load-test.yml  security-headers-check.yml  security-headers.yml  visual-regression.yml
backend/: .env.example  README.md  openapi.yaml  package.json
backend/scripts/: build-redoc.js  security-audit.js  validateOpenApi.js
backend/src/: db.js  index.js  index.test.js  schemas.js  tracing.js
contracts/campaign/: FUZZING.md
docs/: ARCHITECTURE_OVERVIEW.md  BROWSER_COMPATIBILITY.md  CAMPAIGN_CREATION.md  DEPLOYMENT.md  DEVELOPMENT.md  E2E_TESTING.md  MAINNET_CHECKLIST.md  MERKLE_ALLOWLIST.md  RUNBOOK.md  SECURITY_XSS_PREVENTION.md  TTL_STRATEGY.md  upgradeability.md
frontend/: .env.example  README.md  index.html  nginx.conf  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/public/: embed.js  manifest.webmanifest
frontend/src/: AdminCampaigns.jsx  App.jsx  CampaignAnalytics.css  CampaignAnalytics.jsx  CampaignDetail.css  CampaignDetail.jsx  CampaignLeaderboard.jsx  CreateCampaign.jsx  EmbedCampaignCard.jsx  (+9 more)
load-tests/: README.md
nginx/: trivela.conf.template
scripts/: build-bindings.js  deploy-blue-green.sh  deploy-testnet.sh  generate-merkle.mjs  run-load-test.sh
(+114 files in other folders)
